v1.0.0/modules/schema/pages/class/Terminal.adoc
= `Terminal`
:toclevels: 4


+++An AC electrical connection point to a piece of conducting equipment. Terminals are connected at physical connection points called connectivity nodes.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Terminal`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/ACDCTerminal.adoc[`ACDCTerminal`]
*** *`Terminal`*
 **** xref::class/MktTerminal.adoc[`MktTerminal`]


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Terminal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TopologicalNode {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ConnectivityNode {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ConductingEquipment {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



RegulatingControl {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



MutualCoupling {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TransformerEnd {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



BranchGroupTerminal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



SvPowerFlow {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



AuxiliaryEquipment {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



MutualCoupling {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TieFlow {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



EquipmentFault {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ACDCConverter {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PinTerminal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Feeder {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Circuit {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



RemoteInputSignal {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Bushing {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



BusNameMarker {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



OperationalLimitSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Measurement {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




Terminal -> TopologicalNode: TopologicalNode


Terminal -> ConnectivityNode: ConnectivityNode


Terminal -> ConductingEquipment: ConductingEquipment


Terminal -> RegulatingControl: RegulatingControl


Terminal -> MutualCoupling: HasFirstMutualCoupling


Terminal -> TransformerEnd: TransformerEnd


Terminal -> BranchGroupTerminal: BranchGroupTerminal


Terminal -> SvPowerFlow: SvPowerFlow


Terminal -> AuxiliaryEquipment: AuxiliaryEquipment


Terminal -> MutualCoupling: HasSecondMutualCoupling


Terminal -> TieFlow: TieFlow


Terminal -> EquipmentFault: EquipmentFaults


Terminal -> ACDCConverter: ConverterDCSides


Terminal -> PinTerminal: PinTerminal


Terminal -> Feeder: NormalHeadFeeder


Terminal -> Circuit: Circuit


Terminal -> RemoteInputSignal: RemoteInputSignal


Terminal -> Bushing: Bushing


Terminal -> BusNameMarker: BusNameMarker


Terminal -> OperationalLimitSet: OperationalLimitSet


Terminal -> Measurement: Measurements


Terminal -> DiagramObject: DiagramObjects


Terminal -> InstanceSet: InstanceSet


Terminal -> Name: Names


Terminal -> ChangeSetMember: PropertiesCIMDataObject


Terminal -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ConductingEquipment,`ConductingEquipment`>>
| 1
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]
| +++The conducting equipment of the terminal.  Conducting equipment have  terminals that may be connected to other conducting equipment terminals via connectivity nodes or topological nodes.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<Bushing,`Bushing`>>
| 0..1
| xref::class/Bushing.adoc[`Bushing`]
| n/a

| <<Circuit,`Circuit`>>
| 0..1
| xref::class/Circuit.adoc[`Circuit`]
| n/a

| <<ConnectivityNode,`ConnectivityNode`>>
| 0..1
| xref::class/ConnectivityNode.adoc[`ConnectivityNode`]
| +++The connectivity node to which this terminal connects with zero impedance.+++

| <<NormalHeadFeeder,`NormalHeadFeeder`>>
| 0..1
| xref::class/Feeder.adoc[`Feeder`]
| +++The feeder that this terminal normally feeds.  Only specified for the terminals at head of feeders.+++

| <<TopologicalNode,`TopologicalNode`>>
| 0..1
| xref::class/TopologicalNode.adoc[`TopologicalNode`]
| +++The topological node associated with the terminal.   This can be used as an alternative to the connectivity node path to topological node, thus making it unnecessary to model connectivity nodes in some cases.   Note that the if connectivity nodes are in the model, this association would probably not be used as an input specification.+++

| <<phases,`phases`>>
| 0..1
| xref::enumeration/PhaseCode.adoc[`PhaseCode`]
| +++Represents the normal network phasing condition. If the attribute is missing, three phases (ABC) shall be assumed, except for terminals of grounding classes (specializations of EarthFaultCompensator, GroundDisconnector, and Ground) which will be assumed to be N. Therefore, phase code ABCN is explicitly declared when needed, e.g. for star point grounding equipment.
The phase code on terminals connecting same ConnectivityNode or same TopologicalNode as well as for equipment between two terminals shall be consistent.+++

| <<AuxiliaryEquipment,`AuxiliaryEquipment`>>
| 0..*
| xref::class/AuxiliaryEquipment.adoc[`AuxiliaryEquipment`]
| +++The auxiliary equipment connected to the terminal.+++

| <<BranchGroupTerminal,`BranchGroupTerminal`>>
| 0..*
| xref::class/BranchGroupTerminal.adoc[`BranchGroupTerminal`]
| +++The directed branch group terminals for which this terminal is monitored.+++

| <<ConverterDCSides,`ConverterDCSides`>>
| 0..*
| xref::class/ACDCConverter.adoc[`ACDCConverter`]
| +++All converters' DC sides linked to this point of common coupling terminal.+++

| <<EquipmentFaults,`EquipmentFaults`>>
| 0..*
| xref::class/EquipmentFault.adoc[`EquipmentFault`]
| +++The equipment faults at this terminal.+++

| <<HasFirstMutualCoupling,`HasFirstMutualCoupling`>>
| 0..*
| xref::class/MutualCoupling.adoc[`MutualCoupling`]
| +++Mutual couplings associated with the branch as the first branch.+++

| <<HasSecondMutualCoupling,`HasSecondMutualCoupling`>>
| 0..*
| xref::class/MutualCoupling.adoc[`MutualCoupling`]
| +++Mutual couplings with the branch associated as the first branch.+++

| <<PinTerminal,`PinTerminal`>>
| 0..*
| xref::class/PinTerminal.adoc[`PinTerminal`]
| n/a

| <<RegulatingControl,`RegulatingControl`>>
| 0..*
| xref::class/RegulatingControl.adoc[`RegulatingControl`]
| +++The controls regulating this terminal.+++

| <<RemoteInputSignal,`RemoteInputSignal`>>
| 0..*
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Input signal coming from this terminal.+++

| <<SvPowerFlow,`SvPowerFlow`>>
| 0..*
| xref::class/SvPowerFlow.adoc[`SvPowerFlow`]
| +++The power flow state variable associated with the terminal.+++

| <<TieFlow,`TieFlow`>>
| 0..*
| xref::class/TieFlow.adoc[`TieFlow`]
| +++The control area tie flows to which this terminal associates.+++

| <<TransformerEnd,`TransformerEnd`>>
| 0..*
| xref::class/TransformerEnd.adoc[`TransformerEnd`]
| +++All transformer ends connected at this terminal.+++

| <<BusNameMarker,`BusNameMarker`>>
| 0..1
| xref::class/BusNameMarker.adoc[`BusNameMarker`]
| +++The bus name marker used to name the bus (topological node).+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<connected,`connected`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++The connected status is related to a bus-branch model and the topological node to terminal relation.  True implies the terminal is connected to the related topological node and false implies it is not. 
In a bus-branch model, the connected status is used to tell if equipment is disconnected without having to change the connectivity described by the topological node to terminal relation. A valid case is that conducting equipment can be connected in one end and open in the other. In particular for an AC line segment, where the reactive line charging can be significant, this is a relevant case.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<sequenceNumber,`sequenceNumber`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++The orientation of the terminal connections for a multiple terminal conducting equipment.  The sequence numbering starts with 1 and additional terminals should follow in increasing order.   The first terminal is the "starting point" for a two terminal branch.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Measurements,`Measurements`>>
| 0..*
| xref::class/Measurement.adoc[`Measurement`]
| +++Measurements associated with this terminal defining  where the measurement is placed in the network topology.  It may be used, for instance, to capture the sensor position, such as a voltage transformer (PT) at a busbar or a current transformer (CT) at the bar between a breaker and an isolator.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<OperationalLimitSet,`OperationalLimitSet`>>
| 0..*
| xref::class/OperationalLimitSet.adoc[`OperationalLimitSet`]
| +++The operational limit sets at the terminal.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AuxiliaryEquipment]
=== `AuxiliaryEquipment`
+++The auxiliary equipment connected to the terminal.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.AuxiliaryEquipment`
| Cardinality
| 0..*
| Type
| xref::class/AuxiliaryEquipment.adoc[`AuxiliaryEquipment`]


|===

//[discrete]
[#BranchGroupTerminal]
=== `BranchGroupTerminal`
+++The directed branch group terminals for which this terminal is monitored.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.BranchGroupTerminal`
| Cardinality
| 0..*
| Type
| xref::class/BranchGroupTerminal.adoc[`BranchGroupTerminal`]


|===

//[discrete]
[#Bushing]
=== `Bushing`


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.Bushing`
| Cardinality
| 0..1
| Type
| xref::class/Bushing.adoc[`Bushing`]


|===

//[discrete]
[#BusNameMarker]
=== `BusNameMarker`
+++The bus name marker used to name the bus (topological node).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCTerminal.BusNameMarker`
| Cardinality
| 0..1
| Type
| xref::class/BusNameMarker.adoc[`BusNameMarker`]

| Inherited from
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]


|===

//[discrete]
[#Circuit]
=== `Circuit`


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.Circuit`
| Cardinality
| 0..1
| Type
| xref::class/Circuit.adoc[`Circuit`]


|===

//[discrete]
[#ConductingEquipment]
=== `ConductingEquipment`
+++The conducting equipment of the terminal.  Conducting equipment have  terminals that may be connected to other conducting equipment terminals via connectivity nodes or topological nodes.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.ConductingEquipment`
| Cardinality
| 1
| Type
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]


|===

//[discrete]
[#connected]
=== `connected`
+++The connected status is related to a bus-branch model and the topological node to terminal relation.  True implies the terminal is connected to the related topological node and false implies it is not. 
In a bus-branch model, the connected status is used to tell if equipment is disconnected without having to change the connectivity described by the topological node to terminal relation. A valid case is that conducting equipment can be connected in one end and open in the other. In particular for an AC line segment, where the reactive line charging can be significant, this is a relevant case.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCTerminal.connected`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]


|===

//[discrete]
[#ConnectivityNode]
=== `ConnectivityNode`
+++The connectivity node to which this terminal connects with zero impedance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.ConnectivityNode`
| Cardinality
| 0..1
| Type
| xref::class/ConnectivityNode.adoc[`ConnectivityNode`]


|===

//[discrete]
[#ConverterDCSides]
=== `ConverterDCSides`
+++All converters' DC sides linked to this point of common coupling terminal.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.ConverterDCSides`
| Cardinality
| 0..*
| Type
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#EquipmentFaults]
=== `EquipmentFaults`
+++The equipment faults at this terminal.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.EquipmentFaults`
| Cardinality
| 0..*
| Type
| xref::class/EquipmentFault.adoc[`EquipmentFault`]


|===

//[discrete]
[#HasFirstMutualCoupling]
=== `HasFirstMutualCoupling`
+++Mutual couplings associated with the branch as the first branch.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.HasFirstMutualCoupling`
| Cardinality
| 0..*
| Type
| xref::class/MutualCoupling.adoc[`MutualCoupling`]


|===

//[discrete]
[#HasSecondMutualCoupling]
=== `HasSecondMutualCoupling`
+++Mutual couplings with the branch associated as the first branch.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.HasSecondMutualCoupling`
| Cardinality
| 0..*
| Type
| xref::class/MutualCoupling.adoc[`MutualCoupling`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Measurements]
=== `Measurements`
+++Measurements associated with this terminal defining  where the measurement is placed in the network topology.  It may be used, for instance, to capture the sensor position, such as a voltage transformer (PT) at a busbar or a current transformer (CT) at the bar between a breaker and an isolator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCTerminal.Measurements`
| Cardinality
| 0..*
| Type
| xref::class/Measurement.adoc[`Measurement`]

| Inherited from
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#NormalHeadFeeder]
=== `NormalHeadFeeder`
+++The feeder that this terminal normally feeds.  Only specified for the terminals at head of feeders.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.NormalHeadFeeder`
| Cardinality
| 0..1
| Type
| xref::class/Feeder.adoc[`Feeder`]


|===

//[discrete]
[#OperationalLimitSet]
=== `OperationalLimitSet`
+++The operational limit sets at the terminal.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCTerminal.OperationalLimitSet`
| Cardinality
| 0..*
| Type
| xref::class/OperationalLimitSet.adoc[`OperationalLimitSet`]

| Inherited from
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]


|===

//[discrete]
[#phases]
=== `phases`
+++Represents the normal network phasing condition. If the attribute is missing, three phases (ABC) shall be assumed, except for terminals of grounding classes (specializations of EarthFaultCompensator, GroundDisconnector, and Ground) which will be assumed to be N. Therefore, phase code ABCN is explicitly declared when needed, e.g. for star point grounding equipment.
The phase code on terminals connecting same ConnectivityNode or same TopologicalNode as well as for equipment between two terminals shall be consistent.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.phases`
| Cardinality
| 0..1
| Type
| xref::enumeration/PhaseCode.adoc[`PhaseCode`]


|===

//[discrete]
[#PinTerminal]
=== `PinTerminal`


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.PinTerminal`
| Cardinality
| 0..*
| Type
| xref::class/PinTerminal.adoc[`PinTerminal`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RegulatingControl]
=== `RegulatingControl`
+++The controls regulating this terminal.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.RegulatingControl`
| Cardinality
| 0..*
| Type
| xref::class/RegulatingControl.adoc[`RegulatingControl`]


|===

//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Input signal coming from this terminal.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.RemoteInputSignal`
| Cardinality
| 0..*
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]


|===

//[discrete]
[#sequenceNumber]
=== `sequenceNumber`
+++The orientation of the terminal connections for a multiple terminal conducting equipment.  The sequence numbering starts with 1 and additional terminals should follow in increasing order.   The first terminal is the "starting point" for a two terminal branch.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCTerminal.sequenceNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]


|===

//[discrete]
[#SvPowerFlow]
=== `SvPowerFlow`
+++The power flow state variable associated with the terminal.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.SvPowerFlow`
| Cardinality
| 0..*
| Type
| xref::class/SvPowerFlow.adoc[`SvPowerFlow`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TieFlow]
=== `TieFlow`
+++The control area tie flows to which this terminal associates.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.TieFlow`
| Cardinality
| 0..*
| Type
| xref::class/TieFlow.adoc[`TieFlow`]


|===

//[discrete]
[#TopologicalNode]
=== `TopologicalNode`
+++The topological node associated with the terminal.   This can be used as an alternative to the connectivity node path to topological node, thus making it unnecessary to model connectivity nodes in some cases.   Note that the if connectivity nodes are in the model, this association would probably not be used as an input specification.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.TopologicalNode`
| Cardinality
| 0..1
| Type
| xref::class/TopologicalNode.adoc[`TopologicalNode`]


|===

//[discrete]
[#TransformerEnd]
=== `TransformerEnd`
+++All transformer ends connected at this terminal.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.TransformerEnd`
| Cardinality
| 0..*
| Type
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===


