v1.1.0/modules/schema/pages/class/Terminal.adoc
= `Terminal`
:toclevels: 4


+++An AC electrical connection point to a piece of conducting equipment. Terminals are connected at physical connection points called connectivity nodes.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Terminal`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/ACDCTerminal.adoc[`ACDCTerminal`]
*** *`Terminal`*
 **** xref::class/MktTerminal.adoc[`MktTerminal`]


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<AuxiliaryEquipment,`AuxiliaryEquipment`>>
//| [[slots_table.AuxiliaryEquipment]]<<AuxiliaryEquipment,`AuxiliaryEquipment`>>
| 0..* +
xref::class/AuxiliaryEquipment.adoc[`AuxiliaryEquipment`]
| +++The auxiliary equipment connected to the terminal.+++
| _n/a_

| <<BranchGroupTerminal,`BranchGroupTerminal`>>
//| [[slots_table.BranchGroupTerminal]]<<BranchGroupTerminal,`BranchGroupTerminal`>>
| 0..* +
xref::class/BranchGroupTerminal.adoc[`BranchGroupTerminal`]
| +++The directed branch group terminals for which this terminal is monitored.+++
| _n/a_

| <<Bushing,`Bushing`>>
//| [[slots_table.Bushing]]<<Bushing,`Bushing`>>
| 0..1 +
xref::class/Bushing.adoc[`Bushing`]
| _n/a_
| _n/a_

| <<Circuit,`Circuit`>>
//| [[slots_table.Circuit]]<<Circuit,`Circuit`>>
| 0..1 +
xref::class/Circuit.adoc[`Circuit`]
| _n/a_
| _n/a_

| <<ConductingEquipment,`ConductingEquipment`>>
//| [[slots_table.ConductingEquipment]]<<ConductingEquipment,`ConductingEquipment`>>
| 1 +
xref::class/ConductingEquipment.adoc[`ConductingEquipment`]
| +++The conducting equipment of the terminal.  Conducting equipment have  terminals that may be connected to other conducting...+++
| _n/a_

| <<ConnectivityNode,`ConnectivityNode`>>
//| [[slots_table.ConnectivityNode]]<<ConnectivityNode,`ConnectivityNode`>>
| 0..1 +
xref::class/ConnectivityNode.adoc[`ConnectivityNode`]
| +++The connectivity node to which this terminal connects with zero impedance.+++
| _n/a_

| <<ConverterDCSides,`ConverterDCSides`>>
//| [[slots_table.ConverterDCSides]]<<ConverterDCSides,`ConverterDCSides`>>
| 0..* +
xref::class/ACDCConverter.adoc[`ACDCConverter`]
| +++All converters' DC sides linked to this point of common coupling terminal.+++
| _n/a_

| <<EquipmentFaults,`EquipmentFaults`>>
//| [[slots_table.EquipmentFaults]]<<EquipmentFaults,`EquipmentFaults`>>
| 0..* +
xref::class/EquipmentFault.adoc[`EquipmentFault`]
| +++The equipment faults at this terminal.+++
| _n/a_

| <<HasFirstMutualCoupling,`HasFirstMutualCoupling`>>
//| [[slots_table.HasFirstMutualCoupling]]<<HasFirstMutualCoupling,`HasFirstMutualCoupling`>>
| 0..* +
xref::class/MutualCoupling.adoc[`MutualCoupling`]
| +++Mutual couplings associated with the branch as the first branch.+++
| _n/a_

| <<HasSecondMutualCoupling,`HasSecondMutualCoupling`>>
//| [[slots_table.HasSecondMutualCoupling]]<<HasSecondMutualCoupling,`HasSecondMutualCoupling`>>
| 0..* +
xref::class/MutualCoupling.adoc[`MutualCoupling`]
| +++Mutual couplings with the branch associated as the first branch.+++
| _n/a_

| <<NormalHeadFeeder,`NormalHeadFeeder`>>
//| [[slots_table.NormalHeadFeeder]]<<NormalHeadFeeder,`NormalHeadFeeder`>>
| 0..1 +
xref::class/Feeder.adoc[`Feeder`]
| +++The feeder that this terminal normally feeds.  Only specified for the terminals at head of feeders.+++
| _n/a_

| <<PinTerminal,`PinTerminal`>>
//| [[slots_table.PinTerminal]]<<PinTerminal,`PinTerminal`>>
| 0..* +
xref::class/PinTerminal.adoc[`PinTerminal`]
| _n/a_
| _n/a_

| <<RegulatingControl,`RegulatingControl`>>
//| [[slots_table.RegulatingControl]]<<RegulatingControl,`RegulatingControl`>>
| 0..* +
xref::class/RegulatingControl.adoc[`RegulatingControl`]
| +++The controls regulating this terminal.+++
| _n/a_

| <<RemoteInputSignal,`RemoteInputSignal`>>
//| [[slots_table.RemoteInputSignal]]<<RemoteInputSignal,`RemoteInputSignal`>>
| 0..* +
xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]
| +++Input signal coming from this terminal.+++
| _n/a_

| <<SvPowerFlow,`SvPowerFlow`>>
//| [[slots_table.SvPowerFlow]]<<SvPowerFlow,`SvPowerFlow`>>
| 0..* +
xref::class/SvPowerFlow.adoc[`SvPowerFlow`]
| +++The power flow state variable associated with the terminal.+++
| _n/a_

| <<TieFlow,`TieFlow`>>
//| [[slots_table.TieFlow]]<<TieFlow,`TieFlow`>>
| 0..* +
xref::class/TieFlow.adoc[`TieFlow`]
| +++The control area tie flows to which this terminal associates.+++
| _n/a_

| <<TopologicalNode,`TopologicalNode`>>
//| [[slots_table.TopologicalNode]]<<TopologicalNode,`TopologicalNode`>>
| 0..1 +
xref::class/TopologicalNode.adoc[`TopologicalNode`]
| +++The topological node associated with the terminal.   This can be used as an alternative to the connectivity node path to...+++
| _n/a_

| <<TransformerEnd,`TransformerEnd`>>
//| [[slots_table.TransformerEnd]]<<TransformerEnd,`TransformerEnd`>>
| 0..* +
xref::class/TransformerEnd.adoc[`TransformerEnd`]
| +++All transformer ends connected at this terminal.+++
| _n/a_

| <<phases,`phases`>>
//| [[slots_table.phases]]<<phases,`phases`>>
| 0..1 +
xref::enumeration/PhaseCode.adoc[`PhaseCode`]
| +++Represents the normal network phasing condition. If the attribute is missing, three phases (ABC) shall be assumed, except...+++
| _n/a_

| <<BusNameMarker,`BusNameMarker`>>
//| [[slots_table.BusNameMarker]]<<BusNameMarker,`BusNameMarker`>>
| 0..1 +
xref::class/BusNameMarker.adoc[`BusNameMarker`]
| +++The bus name marker used to name the bus (topological node).+++
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]

| <<Measurements,`Measurements`>>
//| [[slots_table.Measurements]]<<Measurements,`Measurements`>>
| 0..* +
xref::class/Measurement.adoc[`Measurement`]
| +++Measurements associated with this terminal defining  where the measurement is placed in the network topology.  It may be...+++
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]

| <<OperationalLimitSet,`OperationalLimitSet`>>
//| [[slots_table.OperationalLimitSet]]<<OperationalLimitSet,`OperationalLimitSet`>>
| 0..* +
xref::class/OperationalLimitSet.adoc[`OperationalLimitSet`]
| +++The operational limit sets at the terminal.+++
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]

| <<connected,`connected`>>
//| [[slots_table.connected]]<<connected,`connected`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++The connected status is related to a bus-branch model and the topological node to terminal relation.  True implies the...+++
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]

| <<sequenceNumber,`sequenceNumber`>>
//| [[slots_table.sequenceNumber]]<<sequenceNumber,`sequenceNumber`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++The orientation of the terminal connections for a multiple terminal conducting equipment.  The sequence numbering starts...+++
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AuxiliaryEquipment]
=== `AuxiliaryEquipment`
+++The auxiliary equipment connected to the terminal.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.AuxiliaryEquipment`
| Cardinality
| 0..*
| Type
| xref::class/AuxiliaryEquipment.adoc[`AuxiliaryEquipment`]


|===

////
[.text-left]
--
<<slots_table.AuxiliaryEquipment,&#10548;>>
--
////


//[discrete]
[#BranchGroupTerminal]
=== `BranchGroupTerminal`
+++The directed branch group terminals for which this terminal is monitored.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.BranchGroupTerminal`
| Cardinality
| 0..*
| Type
| xref::class/BranchGroupTerminal.adoc[`BranchGroupTerminal`]


|===

////
[.text-left]
--
<<slots_table.BranchGroupTerminal,&#10548;>>
--
////


//[discrete]
[#Bushing]
=== `Bushing`



[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.Bushing`
| Cardinality
| 0..1
| Type
| xref::class/Bushing.adoc[`Bushing`]


|===

////
[.text-left]
--
<<slots_table.Bushing,&#10548;>>
--
////


//[discrete]
[#BusNameMarker]
=== `BusNameMarker`
+++The bus name marker used to name the bus (topological node).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCTerminal.BusNameMarker`
| Cardinality
| 0..1
| Type
| xref::class/BusNameMarker.adoc[`BusNameMarker`]

| Inherited from
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]


|===

////
[.text-left]
--
<<slots_table.BusNameMarker,&#10548;>>
--
////


//[discrete]
[#Circuit]
=== `Circuit`



[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.Circuit`
| Cardinality
| 0..1
| Type
| xref::class/Circuit.adoc[`Circuit`]


|===

////
[.text-left]
--
<<slots_table.Circuit,&#10548;>>
--
////


//[discrete]
[#ConductingEquipment]
=== `ConductingEquipment`
+++The conducting equipment of the terminal.  Conducting equipment have  terminals that may be connected to other conducting equipment terminals via connectivity nodes or topological nodes.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.ConductingEquipment`
| Cardinality
| 1
| Type
| xref::class/ConductingEquipment.adoc[`ConductingEquipment`]


|===

////
[.text-left]
--
<<slots_table.ConductingEquipment,&#10548;>>
--
////


//[discrete]
[#connected]
=== `connected`
+++The connected status is related to a bus-branch model and the topological node to terminal relation.  True implies the terminal is connected to the related topological node and false implies it is not. 
In a bus-branch model, the connected status is used to tell if equipment is disconnected without having to change the connectivity described by the topological node to terminal relation. A valid case is that conducting equipment can be connected in one end and open in the other. In particular for an AC line segment, where the reactive line charging can be significant, this is a relevant case.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCTerminal.connected`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]


|===

////
[.text-left]
--
<<slots_table.connected,&#10548;>>
--
////


//[discrete]
[#ConnectivityNode]
=== `ConnectivityNode`
+++The connectivity node to which this terminal connects with zero impedance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.ConnectivityNode`
| Cardinality
| 0..1
| Type
| xref::class/ConnectivityNode.adoc[`ConnectivityNode`]


|===

////
[.text-left]
--
<<slots_table.ConnectivityNode,&#10548;>>
--
////


//[discrete]
[#ConverterDCSides]
=== `ConverterDCSides`
+++All converters' DC sides linked to this point of common coupling terminal.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.ConverterDCSides`
| Cardinality
| 0..*
| Type
| xref::class/ACDCConverter.adoc[`ACDCConverter`]


|===

////
[.text-left]
--
<<slots_table.ConverterDCSides,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#EquipmentFaults]
=== `EquipmentFaults`
+++The equipment faults at this terminal.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.EquipmentFaults`
| Cardinality
| 0..*
| Type
| xref::class/EquipmentFault.adoc[`EquipmentFault`]


|===

////
[.text-left]
--
<<slots_table.EquipmentFaults,&#10548;>>
--
////


//[discrete]
[#HasFirstMutualCoupling]
=== `HasFirstMutualCoupling`
+++Mutual couplings associated with the branch as the first branch.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.HasFirstMutualCoupling`
| Cardinality
| 0..*
| Type
| xref::class/MutualCoupling.adoc[`MutualCoupling`]


|===

////
[.text-left]
--
<<slots_table.HasFirstMutualCoupling,&#10548;>>
--
////


//[discrete]
[#HasSecondMutualCoupling]
=== `HasSecondMutualCoupling`
+++Mutual couplings with the branch associated as the first branch.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.HasSecondMutualCoupling`
| Cardinality
| 0..*
| Type
| xref::class/MutualCoupling.adoc[`MutualCoupling`]


|===

////
[.text-left]
--
<<slots_table.HasSecondMutualCoupling,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#Measurements]
=== `Measurements`
+++Measurements associated with this terminal defining  where the measurement is placed in the network topology.  It may be used, for instance, to capture the sensor position, such as a voltage transformer (PT) at a busbar or a current transformer (CT) at the bar between a breaker and an isolator.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCTerminal.Measurements`
| Cardinality
| 0..*
| Type
| xref::class/Measurement.adoc[`Measurement`]

| Inherited from
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]


|===

////
[.text-left]
--
<<slots_table.Measurements,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#NormalHeadFeeder]
=== `NormalHeadFeeder`
+++The feeder that this terminal normally feeds.  Only specified for the terminals at head of feeders.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.NormalHeadFeeder`
| Cardinality
| 0..1
| Type
| xref::class/Feeder.adoc[`Feeder`]


|===

////
[.text-left]
--
<<slots_table.NormalHeadFeeder,&#10548;>>
--
////


//[discrete]
[#OperationalLimitSet]
=== `OperationalLimitSet`
+++The operational limit sets at the terminal.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCTerminal.OperationalLimitSet`
| Cardinality
| 0..*
| Type
| xref::class/OperationalLimitSet.adoc[`OperationalLimitSet`]

| Inherited from
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]


|===

////
[.text-left]
--
<<slots_table.OperationalLimitSet,&#10548;>>
--
////


//[discrete]
[#phases]
=== `phases`
+++Represents the normal network phasing condition. If the attribute is missing, three phases (ABC) shall be assumed, except for terminals of grounding classes (specializations of EarthFaultCompensator, GroundDisconnector, and Ground) which will be assumed to be N. Therefore, phase code ABCN is explicitly declared when needed, e.g. for star point grounding equipment.
The phase code on terminals connecting same ConnectivityNode or same TopologicalNode as well as for equipment between two terminals shall be consistent.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.phases`
| Cardinality
| 0..1
| Type
| xref::enumeration/PhaseCode.adoc[`PhaseCode`]


|===

////
[.text-left]
--
<<slots_table.phases,&#10548;>>
--
////


//[discrete]
[#PinTerminal]
=== `PinTerminal`



[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.PinTerminal`
| Cardinality
| 0..*
| Type
| xref::class/PinTerminal.adoc[`PinTerminal`]


|===

////
[.text-left]
--
<<slots_table.PinTerminal,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#RegulatingControl]
=== `RegulatingControl`
+++The controls regulating this terminal.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.RegulatingControl`
| Cardinality
| 0..*
| Type
| xref::class/RegulatingControl.adoc[`RegulatingControl`]


|===

////
[.text-left]
--
<<slots_table.RegulatingControl,&#10548;>>
--
////


//[discrete]
[#RemoteInputSignal]
=== `RemoteInputSignal`
+++Input signal coming from this terminal.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.RemoteInputSignal`
| Cardinality
| 0..*
| Type
| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`]


|===

////
[.text-left]
--
<<slots_table.RemoteInputSignal,&#10548;>>
--
////


//[discrete]
[#sequenceNumber]
=== `sequenceNumber`
+++The orientation of the terminal connections for a multiple terminal conducting equipment.  The sequence numbering starts with 1 and additional terminals should follow in increasing order.   The first terminal is the "starting point" for a two terminal branch.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ACDCTerminal.sequenceNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ACDCTerminal.adoc[`ACDCTerminal`]


|===

////
[.text-left]
--
<<slots_table.sequenceNumber,&#10548;>>
--
////


//[discrete]
[#SvPowerFlow]
=== `SvPowerFlow`
+++The power flow state variable associated with the terminal.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.SvPowerFlow`
| Cardinality
| 0..*
| Type
| xref::class/SvPowerFlow.adoc[`SvPowerFlow`]


|===

////
[.text-left]
--
<<slots_table.SvPowerFlow,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TieFlow]
=== `TieFlow`
+++The control area tie flows to which this terminal associates.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.TieFlow`
| Cardinality
| 0..*
| Type
| xref::class/TieFlow.adoc[`TieFlow`]


|===

////
[.text-left]
--
<<slots_table.TieFlow,&#10548;>>
--
////


//[discrete]
[#TopologicalNode]
=== `TopologicalNode`
+++The topological node associated with the terminal.   This can be used as an alternative to the connectivity node path to topological node, thus making it unnecessary to model connectivity nodes in some cases.   Note that the if connectivity nodes are in the model, this association would probably not be used as an input specification.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.TopologicalNode`
| Cardinality
| 0..1
| Type
| xref::class/TopologicalNode.adoc[`TopologicalNode`]


|===

////
[.text-left]
--
<<slots_table.TopologicalNode,&#10548;>>
--
////


//[discrete]
[#TransformerEnd]
=== `TransformerEnd`
+++All transformer ends connected at this terminal.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Terminal.TransformerEnd`
| Cardinality
| 0..*
| Type
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.TransformerEnd,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/ACDCConverter.adoc[`ACDCConverter`] | xref::class/ACDCConverter.adoc#PccTerminal[`PccTerminal`]



| xref::class/AuxiliaryEquipment.adoc[`AuxiliaryEquipment`] | xref::class/AuxiliaryEquipment.adoc#Terminal[`Terminal`]



| xref::class/BranchGroupTerminal.adoc[`BranchGroupTerminal`] | xref::class/BranchGroupTerminal.adoc#Terminal[`Terminal`]



| xref::class/Bushing.adoc[`Bushing`] | xref::class/Bushing.adoc#Terminal[`Terminal`]



| xref::class/Circuit.adoc[`Circuit`] | xref::class/Circuit.adoc#EndTerminal[`EndTerminal`]



| xref::class/ConductingEquipment.adoc[`ConductingEquipment`] | xref::class/ConductingEquipment.adoc#Terminals[`Terminals`]



| xref::class/ConnectivityNode.adoc[`ConnectivityNode`] | xref::class/ConnectivityNode.adoc#Terminals[`Terminals`]



| xref::class/EquipmentFault.adoc[`EquipmentFault`] | xref::class/EquipmentFault.adoc#Terminal[`Terminal`]



| xref::class/Feeder.adoc[`Feeder`] | xref::class/Feeder.adoc#NormalHeadTerminal[`NormalHeadTerminal`]



| xref::class/MutualCoupling.adoc[`MutualCoupling`] | xref::class/MutualCoupling.adoc#Second_Terminal[`Second_Terminal`]



| xref::class/PinTerminal.adoc[`PinTerminal`] | xref::class/PinTerminal.adoc#Terminal[`Terminal`]



| xref::class/RegulatingControl.adoc[`RegulatingControl`] | xref::class/RegulatingControl.adoc#Terminal[`Terminal`]



| xref::class/RemoteInputSignal.adoc[`RemoteInputSignal`] | xref::class/RemoteInputSignal.adoc#Terminal[`Terminal`]



| xref::class/SvPowerFlow.adoc[`SvPowerFlow`] | xref::class/SvPowerFlow.adoc#Terminal[`Terminal`]



| xref::class/TieFlow.adoc[`TieFlow`] | xref::class/TieFlow.adoc#Terminal[`Terminal`]



| xref::class/TopologicalNode.adoc[`TopologicalNode`] | xref::class/TopologicalNode.adoc#Terminal[`Terminal`]



| xref::class/TransformerEnd.adoc[`TransformerEnd`] | xref::class/TransformerEnd.adoc#Terminal[`Terminal`]


|===

